homepage mobile inner text alignment fixes

--- a/public_html/italiadev/scss/partials/_stackGrid.scss
+++ b/public_html/italiadev/scss/partials/_stackGrid.scss
@@ -176,6 +176,7 @@
 	background-size      : contain;
 	background-repeat    : no-repeat;
 	animation-delay      : 0.5s;
+	padding: 3vw;
 	background-blend-mode: multiply;
 	@include respond-to(tablet) {
 		margin-top : 9.5vw;
@@ -226,7 +227,7 @@
 
 	#home-interviews {
 		position     : relative;
-		padding      : 1vw;
+		padding      : 3vw;
 		text-align   : center;
 		margin-bottom: 0.5em;
 		@extend .blue-bg;
